// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/navbar should have a default behaviour 1`] = `
<div
  className=""
  style={Object {}}
>
  Workbench
</div>
`;

exports[`component/navbar should take custom className 1`] = `
<div
  className="custom"
  style={Object {}}
>
  Workbench
</div>
`;

exports[`component/navbar should take custom style 1`] = `
<div
  className=""
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  Workbench
</div>
`;
